--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "husky": "^9.0.11",
     "jsdom": "^24.1.1",
     "next": "^14.2.5",
+    "next-router-mock": "^0.9.13",
     "prettier": "3.3.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
